# projetopdf

./: .gitignore  README.md  pyproject.toml
image_pdf/: cliente.py  script1.py
